data/derived/fa15/progs/unify/prog2921.ml.out
Characters 318-320:
  removeZero (add (l1 (if l1 > l2 then l1 else l2)));;
                                       ^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
